# bulk-ingredient-finder

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railpack.json  railway.json  start.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_enable_extensions.py  0002_domain_model.py  0003_ingredient_needs_review.py  0004_org_home_location.py  0005_translation_cache.py  0006_auth_tokens.py  0007_ingredient_forecasts.py  0008_invoices.py
apps/api/app/: __init__.py  deps.py  main.py  seed_data.py  shared.py  synonyms.py  units.py
apps/api/app/core/: config.py  cookies.py  errors.py  limiter.py  logging.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  _sa_enum.py  audit.py  auth_token.py  enums.py  ingredient.py  invoice.py  org.py  price.py  store.py  translation_cache.py  user.py
apps/api/app/repositories/: __init__.py  auth.py  base.py  compare.py  ingredients.py  invoices.py  prices.py  search.py  stores.py  (+2 more)
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_add_ingredient.py  test_auth.py  test_bulk_ingredients.py  test_compare.py  test_health.py  test_ingredients_api.py  test_invoice_pack_math.py  test_invoices.py  test_multitenant_leak.py  test_org_scoping.py  test_polish.py  test_price_discovery.py  test_price_normalization.py  test_prices.py  test_search.py  test_seed.py  test_stores.py  test_synonyms.py  test_translation_service.py  test_units.py
(+102 files in other folders)
